fix: asymmetric container padding to shift all sections right

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -23,7 +23,7 @@
     max-width: 1440px;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 4rem;
+    padding-left: 10rem;
     padding-right: 12rem;
   }
 
